--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <script src="js/app.js"></script>
 </head>
 <body>
+<section class="preFullScreen">
+    <div class="playerChoose">
+        <button class="opponent">Player</button>
+        <button class="opponent">Comupter</button>
+    </div>
+    <div class="maxRound">
+        <ul class="mr">
+            <li>1</li>
+            <li>3</li>
+            <li>5</li>
+        </ul>
+    </div>
+    <button class="playButton">Play</button>
+</section>
 <section class="game">
     <div class="container">
         <div class="scoreboard">
@@ -14,9 +28,9 @@
             <div class="sb2">Player 2 : <span class="score2">0</span></div>
         </div>
         <div class="game_buttons">
-            <button class='btn' data-name="paper">Paper</button>
-            <button class='btn' data-name="rock">Rock</button>
-            <button class='btn' data-name="scissors">Scissors</button>
+            <button class='selectBtn' data-name="paper">Paper</button>
+            <button class='selectBtn' data-name="rock">Rock</button>
+            <button class='selectBtn' data-name="scissors">Scissors</button>
         </div>
     </div>
 </section>
