--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         </div>
     </div>
 </section>
+<section class="resume">
+    <div class="container">
+        <div></div>
+        <button class="newGame">New Game</button>
+    </div>
+</section>
 
 </body>
 </html>
